# transformer-implementation

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: preprocess.sh  sentence_piece.model  sentence_piece.vocab  valid.fr-en_preprocessed.en  valid.fr-en_preprocessed.fr
src/: Makefile  data.py  dataset.py  evaluate.py  main.py  train.py  translate.py  utils.py
src/models/: __init__.py  decoder.py  embedding_layer.py  encoder.py  feedforwardnn.py  multihead_attention.py  tokenizer.py  transformer.py
