[tool.poetry]
name = "transformer-implementation"
version = "1.0.0"
description = "Transformer implementation."
authors = ["Sean (Seok-Won) Yi <seantuokc@gmail.com>"]
readme = "README.md"
packages = [{include = "transformer_implementation"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
