[tool.poetry]
name = "transformer-implementation"
version = "0.1.0"
description = "Transformer implementation."
authors = ["Sean (Seok-Won) Yi <seantuokc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
wandb = "^0.15.5"
sacrebleu = "^2.3.1"
tqdm = "^4.65.0"
sentencepiece = "^0.1.99"
datasets = "^2.13.1"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

